objects/Schedules__c.object
<CustomObject>
    <fields>
        <fullName>Access_Code__c</fullName>
        <formula>Deal_Parent__r.Access_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealAccess Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Brand_Program__c</fullName>
        <formula>DealAccount__c &amp;&quot;-&quot;&amp; DealBrand__c &amp;&quot;-&quot;&amp; DealProgram__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Brand Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Intacct_SI_Number_Comments__c</fullName>
        <label>Additional Intacct SI Number Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Intacct_SI_Number__c</fullName>
        <label>Additional Intacct SI Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affidavit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Affidavits from syndicated properties have been received</description>
        <label>[Dep]Affidavit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Archived_Prelog_Booked_Dollars__c</fullName>
        <label>Archived Prelog Booked Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Archived_Prelog_Count__c</fullName>
        <label>Archived Prelog Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Auto Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGColor__c</fullName>
        <formula>IF ( ISPICKVAL(Status__c ,&apos;Canceled&apos; ) , &quot;#FE2E2E&quot; , 
IF ( Units_Aired__c / Units_Available__c &lt;= 0.5
, &quot;#FFA8A8&quot;
, IF ( Units_Aired__c / Units_Available__c &lt; 0.8
, &quot;#FFFF84&quot;
, &quot;&quot; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BG Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barter_Movie__c</fullName>
        <formula>Deal_Parent__r.Program__r.Barter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Dep]Barter Movie</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barter_Package__c</fullName>
        <formula>case( Deal_Parent__r.Program__r.Package__c , &quot;LL3&quot;, &quot;LL3&quot;, &quot;P1&quot;, &quot;P1&quot;, &quot;P2&quot;, &quot;P2&quot;, &quot;P3&quot;, &quot;P3&quot;, &quot;E1&quot;, &quot;E1&quot;, &quot;N12&quot;, &quot;N12&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Bundle_Units__c</fullName>
        <label>Bonus Bundle Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Dollars_Live_Demo__c</fullName>
        <formula>Dollars_Booked__c *(7543/10000)</formula>
        <label>Booked Dollars - Live Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Increvenue__c</fullName>
        <description>Calculates Increvenue Booked, rather than Cleared/Aired.  Excludes availability.</description>
        <formula>If(  Units_Available__c &lt;0, 0,(X30_Rate__c - Filler_Rate__c )*  Equiv_30_Booked__c)</formula>
        <inlineHelpText>Calculates Increvenue Booked, rather than Cleared/Aired.</inlineHelpText>
        <label>Booked Increvenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Timeline__c</fullName>
        <description>Timeline calculation to help with bookings pacing reports</description>
        <formula>Week__c - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Timeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Broadcast_Month__c</fullName>
        <formula>(Week__c +6)-  DAY(Week__c +6)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broadcast Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bundle_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Ghost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Bundle Ghost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bundle_Order_Number__c</fullName>
        <label>[Dep]Bundle Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_EQUIV_30__c</fullName>
        <formula>if( AND(Units_Available__c &gt;0, NOT(DealBrand__c = &quot;GM Units&quot;)), 
(VALUE(TEXT(Deal_Parent__r.Length__c)) * Units_Aired__c 
/ 30 ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if( AND(Units_Available__c &gt;0,  NOT(DealBrand__c   =  &quot;GM Units&quot;)),
(case(Deal_Parent__r.Length__c, &quot;10&quot;,10, &quot;30&quot;, 30, &quot;45&quot;, 45, &quot;60&quot;, 60, &quot;75&quot;, 75, &quot;105&quot;, 105, &quot;120&quot;, 120, &quot;240&quot;, 240, &quot;300&quot;, 300, &quot;15&quot;, 15, &quot;90&quot;, 90, &quot;180&quot;, 180, &quot;1710&quot;, 1710, 0) * UnitsA</inlineHelpText>
        <label>CALC EQUIV :30</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIA_Status__c</fullName>
        <label>CIA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIA__c</fullName>
        <formula>IF( Deal_Parent__r.Contact__r.Account.CIA__c = TRUE, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONGA_Syndication_Test_Follow_Up_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005Uf0l?pv0=&quot; + Deal_Parent__r.Id + &quot;,00OC0000005Uic1?pv0=&quot; + Deal_Parent__r.Id +&quot;,00OC0000005Vv53?pv0=&quot; + Deal_Parent__r.Id +
&quot;&amp;CETId=a4BC0000000Kyzr&quot; +
&quot;&amp;QVar0id=a1nC0000000TJEE?pv0=&quot; + Deal_Parent__r.Id +
&quot;&amp;QVar0format=10000&quot; +
&quot;&amp;EmailToId=003C000001ZEd3y&quot; +
&quot;&amp;EmailAdditionalTo={QVar0}&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CONGA Syndication Test Follow Up URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONGA_Workflow_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;https://workflow.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot;
&amp; $Api.Session_ID 
&amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 
&amp; Conga_Cable_Test_Follow_Up_URL__c , &quot;Test Conga Workflow URL via UI&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CONGA Workflow Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COOL_TV_Daypart__c</fullName>
        <label>[Dep]COOL TV Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6a-9a – EM</fullName>
                </value>
                <value>
                    <fullName>9a-3p – Day</fullName>
                </value>
                <value>
                    <fullName>3p-7p – FR</fullName>
                </value>
                <value>
                    <fullName>7p-1a – PR</fullName>
                </value>
                <value>
                    <fullName>1a-4a -- LN</fullName>
                </value>
                <value>
                    <fullName>ROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COUNTMENOT__c</fullName>
        <formula>if(or( case(Deal_Parent__r.Status__c, &quot;Canceled&quot;, &quot;N&quot;, &quot;Pre-Empted&quot;, &quot;N&quot;, &quot;Y&quot;) = &quot;N&quot;,  

case(Status__c, &quot;Canceled&quot;, &quot;N&quot;, &quot;Pre-Empted&quot;, &quot;N&quot;, &quot;Y&quot;) = &quot;N&quot;,

Units_Aired__c =0), &quot;N&quot;, &quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIRED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_Synd_PP__c</fullName>
        <formula>Text(Deal_Parent__r.Program__r.Cable_Synd__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cable/Synd/PP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <description>Updated by workflow that inputs the date field is canceled</description>
        <label>Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cap__c</fullName>
        <label>Cap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uncapped</fullName>
                    <default>true</default>
                    <label>Uncapped</label>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>Ghost</fullName>
                </value>
                <value>
                    <fullName>1/2 in PR and 1/2 in OV</fullName>
                    <isActive>false</isActive>
                    <label>1/2 in PR and 1/2 in OV</label>
                </value>
                <value>
                    <fullName>100%</fullName>
                    <isActive>false</isActive>
                    <label>100%</label>
                </value>
                <value>
                    <fullName>50% 2</fullName>
                    <isActive>false</isActive>
                    <label>50% 2</label>
                </value>
                <value>
                    <fullName>80% - In OV</fullName>
                    <isActive>false</isActive>
                    <label>80% - In OV</label>
                </value>
                <value>
                    <fullName>Change Daypart to 5a-9a</fullName>
                    <isActive>false</isActive>
                    <label>Change Daypart to 5a-9a</label>
                </value>
                <value>
                    <fullName>Move to DT</fullName>
                    <isActive>false</isActive>
                    <label>Move to DT</label>
                </value>
                <value>
                    <fullName>Move to ON</fullName>
                    <isActive>false</isActive>
                    <label>Move to ON</label>
                </value>
                <value>
                    <fullName>Uncaped</fullName>
                    <isActive>false</isActive>
                    <label>Uncaped</label>
                </value>
                <value>
                    <fullName>Uncapped 2</fullName>
                    <isActive>false</isActive>
                    <label>Uncapped 2</label>
                </value>
                <value>
                    <fullName>enter X1</fullName>
                    <isActive>false</isActive>
                    <label>enter X1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when the agency owning the time period listed on the record has changed from the previous month.  In most cases, this will be handled be pricing and planning during a monthly data upload operation.</inlineHelpText>
        <label>[Dep]Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearance_Percentage__c</fullName>
        <formula>Spot_Total__c / PreLog_Booked_Dollars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clearance Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Clearance__c</fullName>
        <formula>if( Units_Available__c = 0, 0,   Units_Aired__c / Units_Available__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clearance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Cable_Test_Follow_Up_URL__c</fullName>
        <description>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005Uf0l?pv0=Deal_Parent__r.Id,00OC0000005Uic1?pv0=Deal_Parent__r.Id&quot; +
&quot;&amp;EmailAdditionalTo=QVar0&quot; +
&quot;&amp;CongaEmailTemplateId=a4BC0000000Kyy5&quot; +
&quot;&amp;AttachmentParentId=Deal_Parent__r.Id&quot; +
&quot;&amp;EmailRelatedToId=Deal_Parent__r.Id&quot; +
&quot;&amp;QVar0id=a1nC0000000TJEE?pv0=Deal_Parent__r.Id&quot; +
&quot;&amp;QVar0format=10000&quot; +
&quot;&amp;QMode=3&quot;</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005Uf0l?pv0=&quot; + Deal_Parent__r.Id + &quot;,00OC0000005Uic1?pv0=&quot; + Deal_Parent__r.Id +&quot;,00OC0000005Vv53?pv0=&quot; + Deal_Parent__r.Id +
&quot;&amp;CETId=a4BC0000000Kyy5&quot; +
&quot;&amp;QVar0id=a1nC0000000TJEE?pv0=&quot; + Deal_Parent__r.Id +
&quot;&amp;QVar0format=10000&quot; +
&quot;&amp;EmailToId=003C000001ZEd3y&quot; +
&quot;&amp;EmailAdditionalTo={QVar0}&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CONGA Cable Test Follow Up URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Capped_Schedules_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005zkbT?pv0=&quot; + Deal_Parent__r.Owner:User.Alias + &quot;,00OC0000005Uic1?pv0=&quot; + Deal_Parent__r.Owner:User.Alias +&quot;,00OC0000005Vv53?pv0=&quot; + Deal_Parent__r.Owner:User.Alias +
&quot;&amp;CETId=a4BC0000000Kyy5&quot; +
&quot;&amp;QVar0id=a1nC0000000TJEE?pv0=&quot; + Deal_Parent__r.Id +
&quot;&amp;QVar0format=10000&quot; +
&quot;&amp;EmailToId=003C000001ZEd3y&quot; +
&quot;&amp;EmailAdditionalTo={QVar0}&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Capped Schedules URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Workflow_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for Conga Workflow Cable Test Follow Up</inlineHelpText>
        <label>[Dep]Conga Workflow Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Hour__c</fullName>
        <description>Calculates Hour of Day for Schedule Created using MID function.  DOES NOT account for Daylight Savings</description>
        <formula>VALUE(MID (TEXT ( CreatedDate - (0.0417 * 4)), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates Hour of Day for Schedule Created using MID function.  DOES NOT account for Daylight Savings</inlineHelpText>
        <label>Created Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Week_in_Quarter__c</fullName>
        <description>Week Booked Relative to Quarter Change</description>
        <formula>Datevalue( CreatedDate )-

Date(
Year(Week__c +7),  
CEILING(MONTH((Week__c+7))/3)*3-2,
1)
+

MOD(
Date(
Year(Week__c +7),  
CEILING(MONTH((Week__c+7))/3)*3-2,
1)
-
Date(1900,1,7)-1,
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Week Booked Relative to Quarter Change</inlineHelpText>
        <label>Created Week in Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_Restrictions__c</fullName>
        <description>Select any days that CANNOT be included and should be EXCLUDED from the schedule</description>
        <inlineHelpText>Select any days that CANNOT be included and should be EXCLUDED from the schedule</inlineHelpText>
        <label>[Dep]Day Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>MGM_HD_Daypart__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tues</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thur</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>CASE(
MOD(  Week__c  - DATE(1900, 1, 7), 7), 
0, &quot;7Sun&quot;, 
1, &quot;1Mon&quot;, 
2, &quot;2Tues&quot;, 
3, &quot;3Wed&quot;, 
4, &quot;4Th&quot;, 
5, &quot;5Fri&quot;, 
6, &quot;6Sat&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daypart__c</fullName>
        <formula>IF(OR(LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;DA&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;EM&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;ON&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;PR&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;LN&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;EF&quot;, LEFT(TEXT(MGM_HD_Daypart__c), 2) = &quot;LF&quot;),LEFT(TEXT(MGM_HD_Daypart__c), 2), CASE( MGM_HD_Daypart__c, 

&quot;9A-6P – Day&quot;,&quot;DA&quot;, 
&quot;Day Live Game&quot;,&quot;DA&quot;, 
&quot;6P-12A – PR&quot;,&quot;PR&quot;, 
&quot;Prime Live Game&quot;,&quot;PR&quot;, 
&quot;JC - MS 7p-12a&quot;,&quot;PR&quot;, 
&quot;6A-9A – EM&quot;,&quot;EM&quot;, 
&quot;3A-6A -- ON&quot;,&quot;ON&quot;, 
&quot;JC - MS 12a-5a&quot;,&quot;ON&quot;, 
&quot;12A-3A -- LN&quot;,&quot;LN&quot;, 
&quot;SS 9a-4p&quot;,&quot;DA&quot;, 
&quot;MS 12a-2a&quot;,&quot;WC&quot;,
&quot;MS 2a-6a&quot;,&quot;ON&quot;, 
&quot;MS 1p-6p&quot;,&quot;DA&quot;, 
&quot;WC - MS 12a-2a&quot;,&quot;WC&quot;, 
&quot;Matinee Game MS&quot;,&quot;DA&quot;, 
&quot;Prime Game MS&quot;,&quot;PR&quot;, 
&quot;MS 7p-12a&quot;,&quot;PR&quot;, 
&quot;ROS-&quot;,&quot;ROS-&quot;, 
&quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daypart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysAllowedFormula__c</fullName>
        <formula>IF ( INCLUDES ( Days_Allowed__c , &quot;Mon&quot; ) , &quot;M&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Tue&quot; ) , &quot;T&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Wed&quot; ) , &quot;W&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Thu&quot; ) , &quot;T&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Fri&quot; ) , &quot;F&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Sat&quot; ) , &quot;Sa&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Sun&quot; ) , &quot;Su&quot; , &quot;-&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Allowed Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Allowed_Formula__c</fullName>
        <formula>IF ( INCLUDES ( Days_Allowed__c , &quot;Mon&quot; ) , &quot;M&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Tue&quot; ) , &quot;T&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Wed&quot; ) , &quot;W&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Thu&quot; ) , &quot;T&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Fri&quot; ) , &quot;F&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Sat&quot; ) , &quot;Sa&quot; , &quot;-&quot; ) &amp;
IF ( INCLUDES ( Days_Allowed__c , &quot;Sun&quot; ) , &quot;Su&quot; , &quot;-&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Allowed Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Allowed__c</fullName>
        <description>Select days that the schedule is allowed to air</description>
        <inlineHelpText>Select the days that this schedule CAN air on.</inlineHelpText>
        <label>Days Allowed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_of_Air__c</fullName>
        <description>For Syndication Post Logs</description>
        <inlineHelpText>For Syndication Post Logs</inlineHelpText>
        <label>Days of Air</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_until_intg__c</fullName>
        <description>Formula to determine most recent integration since cable/syndication/other integrate on different schedules</description>
        <formula>Due_Date__c - TODAY () + if(ispickval(Deal_Parent__r.Program__r.Cable_Synd__c, &quot;Cable&quot;), 7, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to determine most recent integration since cable/syndication/other integrate on different schedules</inlineHelpText>
        <label>Days Until Intg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealAccount__c</fullName>
        <formula>Deal_Parent__r.Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealAdvertiser__c</fullName>
        <formula>Deal_Parent__r.Advertiser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealAdvertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealBrand__c</fullName>
        <formula>Deal_Parent__r.Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealBrand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealClientCode__c</fullName>
        <formula>Deal_Parent__r.ClientCode__c</formula>
        <label>DealClientCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealContactID__c</fullName>
        <formula>Deal_Parent__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealContact__c</fullName>
        <formula>HYPERLINK (&quot;/&quot; &amp; Deal_Parent__r.Contact__r.Id, Deal_Parent__r.Contact__r.FirstName &amp; &quot; &quot; &amp; Deal_Parent__r.Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealEstimate__c</fullName>
        <formula>Deal_Parent__r.Estimate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealEstimate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealName__c</fullName>
        <formula>Deal_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealProgram__c</fullName>
        <formula>Deal_Parent__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DealProgram</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Info_del__c</fullName>
        <formula>DealAccount__c&amp;&quot; - &quot;&amp;DealBrand__c &amp;&quot; - &quot;&amp; TEXT(UnitLength__c)</formula>
        <label>[Dep]Deal Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Parent__c</fullName>
        <label>Deal Parent</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Schedules</relationshipLabel>
        <relationshipName>Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Demo_30_Rate__c</fullName>
        <formula>Demo_Rate__c / (VALUE(TEXT(Deal_Parent__r.Length__c)) / 30)</formula>
        <inlineHelpText>Demo_Rate__c  / (case(Deal_Parent__r.Length__c, &quot;30&quot;, 30, &quot;45&quot;,45, &quot;60&quot;, 60, &quot;75&quot;, 75, &quot;120&quot;, 120, &quot;240&quot;, 240, &quot;300&quot;, 300, &quot;15&quot;, 15, &quot;90&quot;, 90, &quot;180&quot;, 180, &quot;05&quot;, 0, &quot;10&quot;, 10, 0) / 30)</inlineHelpText>
        <label>:30 Rate - Live Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Demo_Program__c</fullName>
        <formula>If(OR(DealProgram__c =&quot;BounceTV&quot;,DealProgram__c =&quot;COZI&quot;),&quot;National Network&quot;,

If(OR(DealProgram__c =&quot;BounceTV - Local&quot;,DealProgram__c =&quot;COZI - Local&quot;),&quot;Local Network&quot;,

&quot;Network&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program - Live Demo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Rate__c</fullName>
        <formula>ROUND(Rate__c *(7543/10000),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate - Live Demo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discrepancy_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discrepancy Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discrepancy_Comment__c</fullName>
        <description>Used internally for comments regarding the error/discrepancy.</description>
        <inlineHelpText>Used internally for comments regarding the error or discrepancy.</inlineHelpText>
        <label>[Dep]Discrepancy Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discrepancy_Report_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;Reportid=00OC0000005Vtsm?pv0=&quot; + Deal_Parent__r.Contact__r.Id + &quot;~pv1=&quot; + DealProgram__c + &quot;,00OC0000005W9E3?pv0=&quot; + Deal_Parent__r.Contact__r.Id +&quot;~?pv1=&quot; + DealProgram__c +
&quot;&amp;CETId=a4BC0000000Kyzh&quot; +
&quot;&amp;EmailToId=&quot; + Deal_Parent__r.Contact__r.Id +
&quot;&amp;EmailCC=&quot; + Deal_Parent__r.Owner:User.Email +
&quot;&amp;Emailbcc=taniabonetti@mvmediasales.com,adrianlo@mvmediasales.com&quot; +
&quot;&amp;lg3=1&quot; +
&quot;&amp;lg4=1&quot; +
&quot;&amp;QMode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discrepancy Report URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discrepancy_Total_Amount__c</fullName>
        <description>Dollar Value for All Schedule Discreps</description>
        <label>Discrepancy Total Amount</label>
        <summarizedField>Spot_Data__c.Spot_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>Spot_Data__c.Status__c</field>
            <operation>equals</operation>
            <value>Discrepancy</value>
        </summaryFilterItems>
        <summaryForeignKey>Spot_Data__c.Schedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dollars_Booked__c</fullName>
        <formula>if( or(ispickval( Status__c , &quot;Canceled&quot;),Units_Aired__c &lt; 0), 0, 

Units_Available__c * Rate__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollars_Canceled__c</fullName>
        <formula>if(ispickval( Status__c , &quot;Canceled&quot;), Units_Available__c * Rate__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canceled Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Week__c  + Deal_Parent__r.Program__r.Intg_Day__c - (Deal_Parent__r.Program__r.Log_Week__c *(7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check_1a__c</fullName>
        <formula>TEXT(Week__c) &amp; DealProgram__c &amp; DealAccount__c  &amp;  DealBrand__c &amp; DealAdvertiser__c &amp; Deal_Parent__r.Campaign__c &amp; Deal_Parent__r.Access_Code__c &amp;  TEXT(UnitLength__c) &amp;  TEXT(Units_Aired__c)  &amp;  TEXT(Rate__c) &amp;  TEXT(Status__c) &amp;  DaysAllowedFormula__c  &amp; Start_End_Time__c &amp; TEXT( MGM_HD_Daypart__c ) &amp; TEXT(Long_Form__c) &amp;  Deal_Parent__r.Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate Check 1a</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <label>Duplicate Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_Filler_Decile__c</fullName>
        <formula>ROUND( 
X30_Rate__c / (Filler_Rate__c * 10/100),0 
) 
/10
-1</formula>
        <label>EUR Filler Decile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>